<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/listing_view_height"
    android:layout_margin="@dimen/margin_5_dp"
    android:elevation="@dimen/tab_elevation_value"
    app:cardCornerRadius="@dimen/margin_3_dp"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10_dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_coupon_store_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_100"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/bg_deactive_btn" />

            <TextView
                android:id="@+id/tv_coupon_store_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_coupon_detail_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10_dp"
            android:layout_weight="1"
            android:background="@drawable/bg_deactive_btn"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_coupon_detail_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/ic_launcher_background"
                android:contentDescription="@string/app_name">

                <TextView
                    android:id="@+id/tv_coupon_category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/photo_tint"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="@dimen/padding_10_dp"
                    android:text="@string/menu"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_10_dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_coupon_detail_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_5_dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_change_location"
                android:gravity="center"
                android:text="@string/location_text"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_coupon_detail_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_5_dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_contact_us"
                android:gravity="center"
                android:text="@string/drawer_change_contact_us_text"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_coupon_detail_website"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_5_dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_company_website"
                android:gravity="center"
                android:text="@string/offer_detail_website_text"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>