<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rl_parent_view"
    tools:context=".activity.ChangeAppLanguage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/iv_change_app_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_app_language"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_40_dp"
                />

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f7f7f7"
                android:layout_below="@+id/iv_change_app_lang"
                android:layout_marginTop="@dimen/margin_30_dp"
                />

            <RadioGroup
                android:id="@+id/rg_app_lang_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/view_line"
                android:layout_marginTop="@dimen/margin_40_dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10_dp"
                    android:paddingLeft="@dimen/padding_10_dp"
                    android:paddingStart="@dimen/padding_10_dp"
                    android:paddingEnd="@dimen/padding_10_dp"
                    android:paddingRight="@dimen/padding_10_dp"
                    android:text="@string/text_english"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_hindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20_dp"
                    android:paddingLeft="@dimen/padding_10_dp"
                    android:paddingStart="@dimen/padding_10_dp"
                    android:paddingEnd="@dimen/padding_10_dp"
                    android:paddingRight="@dimen/padding_10_dp"
                    android:text="@string/text_arabic"
                    android:textColor="#666666"
                    android:textSize="16sp" />


            </RadioGroup>


            <TextView
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg_app_lang_sort"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="160dp"
                android:background="@drawable/signin_btn_bg"
                android:letterSpacing="0.1"
                android:paddingBottom="@dimen/padding_12_dp"
                android:paddingEnd="45dp"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:paddingStart="45dp"
                android:paddingTop="@dimen/padding_12_dp"
                android:text="@string/txt_save_changes"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_14sp" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
